# uniqfunc

./: AGENTS.md  Makefile  README.md  SPEC.md  conftest.py  pyproject.toml
llms/: pydantic-ai.txt
plans/: TEMPLATE.md  uniqfunc-v0-1-0.md
src/uniqfunc/: __init__.py  cli.py  formatters.py  model.py  parser.py  similarity.py  similarity_name_signature.py
tests/: test_cli_json_output.py  test_cli_text_output.py
